@@ -1,3 +1,6 @@
+2007-12-05 David Moore  <dcm@acm.org>
+	* SVN 484: clean up error handling in grab_gray_image
+
 2007-12-04 Damien Douxchamps http://damien.douxchamps.net/
 	* SVN 483: add "-std=gnu99" to compiler options
 	* SVN 482: add log.h.
